correctly sort artists starting with 'The' in services as well.

BUG: 176670